modified the read.Me and added screenshots

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-q<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -83,8 +83,6 @@ q<!DOCTYPE html>
   
     </div>
    
-
-    
     <!-- Thank you state end -->
 
     <div class="attribution">
